--- a/package.json
+++ b/package.json
@@ -9,17 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@remix-run/react": "^2.3.1",
+    "axios": "^1.6.2",
+    "chart.js": "^4.4.0",
+    "moment": "^2.29.4",
+    "next": "14.0.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-modern-calendar-datepicker": "^3.1.6",
+    "react-query": "^3.39.3",
+    "use-dehydrated-state": "^0.1.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
